# JinhsiStudio

./: .gitignore  Cargo.toml  README.md  eslint.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: codecov.yml  dependabot.yml
.github/workflows/: android.yml  ci.yml  core.yml  docs.yml  issue-translator.yml  release.yml  tauri.yml
.github/workflows/release/: release.yml
app/: .gitignore  CHANGELOG.md  components.json  eslint.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
app/scripts/i18n/: check.ts
app/src/: main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.release.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/cmd/: gacha.rs  mod.rs
app/src/hooks/: use-toast.ts
app/src/locales/: index.ts
app/src/pages/: layout.tsx  routers.tsx
app/src/services/: i18n.ts  i18next.d.ts
app/src/test/: setup.ts
core/: CHANGELOG.md  Cargo.toml
core/core/: CHANGELOG.md
core/src/: lib.rs
core/src/gacha/: local.rs  mod.rs  url.rs
core/tests/: gacha.rs
core/tests/data/gacha/: README.md  full_record.json
core/tests/data/gacha/split1/: base.json  other.json
core/tests/data/gacha/split2/: other.json
core/tests/data/gacha/split3/: base.json
docs/: CHANGELOG.md  TODO.md  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/config/: en-us.ts  en_us.ts  index.ts  shared.ts  zh-cn.ts  zh_cn.ts
docs/docs/: CHANGELOG.md
docs/en-us/: index.md
docs/en_us/: index.md
docs/en_us/develop/: development.md
docs/zh_cn/: index.md
docs/zh_cn/develop/: TODO.md  development.md
script/release/: .release-please-manifest.json  release-please-config.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.release.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/cmd/: gacha.rs  mod.rs
src-tmp/app/: globals.css  page.tsx
src-tmp/components/root/: layout.tsx
src/app/: layout.tsx
src/app/gacha/: page.tsx
src/app/settings/: page.tsx
src/assets/styles/: index.css
src/components/base/: base-dialog.tsx  (+2 more)
src/locales/: en_US.json  zh_CN.json
src/pages/: layout.tsx  routers.tsx
src/services/: i18n.ts  i18next.d.ts  log.ts  type.d.ts
(+126 files in other folders)
