[package]
name = "jinhsi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
snafu = "0.8.4"
log = "0.4.22"


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
regex = "1.10.5"