[package]
name = "jinhsi-studio"
version = "0.0.1"
description = "鸣潮多功能工具箱 🧰 | Multifunctional Wuthering Waves Toolkit 🧰"
authors = ["Chiichen<chiichen@qq.com>"]
edition = "2021"

[lib]
name = "jinhsi_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
jinhsi-core = { version = "*" }
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.2"
log = "0.4.22"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-log = "2.0.0-rc.0"
