[package]
name = "jinhsi-studio"
version = "0.0.5"
description = "鸣潮多功能工具箱 🧰 | Multifunctional Wuthering Waves Toolkit 🧰"
authors = ["Chiichen<chiichen@qq.com>"]
edition = "2021"

[lib]
name = "jinhsi_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
jinhsi-core = { path = "../../core" }
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.2"
log = "0.4.22"
tauri-plugin-store = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.0"
tauri-plugin-process = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.3.0"
